--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "variant": "c",
         "__node_handle": "c",
         "sstream": "c",
-        "regalloc.h": "c"
+        "regalloc.h": "c",
+        "map.h": "c"
     }
 }
