its finding at least the start of registers correctly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "__node_handle": "c",
         "sstream": "c",
         "regalloc.h": "c",
-        "map.h": "c"
+        "map.h": "c",
+        "ios": "c"
     }
 }
