added a quick move cleanup phase pre lowering; there are stil redundant moves after lowering

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "ios": "c",
         "assert.h": "c",
         "stdint.h": "c",
-        "locale": "cpp"
+        "locale": "cpp",
+        "ir.h": "c"
     }
 }
